tests/sema/negative/call_unknown_function.nv
fn main() : void {
    foo();
    return;
}
